--- a/src/Components/InputBoxes/InputBoxes.css
+++ b/src/Components/InputBoxes/InputBoxes.css
@@ -83,3 +83,38 @@
     font-size: var(--font-size-small);
     color: var(--color-error);
 }
+
+.search-box{
+    width: 100%;
+    height: 45px;
+    border-radius: 3px;
+    background-color: transparent;
+}
+
+.search-box__inner{
+    width: inherit;
+    height: inherit;
+    position: relative;
+}
+
+.search-box__inner > input {
+    border: none;
+    background-color: #f7f7f7;
+    width: 100%;
+    height: 100%;
+    padding-left: var(--margin-small);
+    padding-right: 40px;
+    font-size: var(--font-size-normal);
+    color: var(--font-color-normal);
+}
+
+.search-box__icon{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);;
+}
+
+.search-box__icon > svg{
+    fill: var(--font-color-light);
+}
