--- a/src/Components/Logo/Logo.css
+++ b/src/Components/Logo/Logo.css
@@ -7,5 +7,5 @@
 }
 
 .app__logo > img{
-    height: 325%;
+    height: 140%;
 }
